--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,28 +1,28 @@
 <%= render "shared/header" %>
 <div class='main'>
 
-  <%# 画面上部の「人生を変えるフリマアプリ」帯部分 %>
+  <%# 画面上部の帯部分 %>
   <div class='title-contents'>
     <h2 class='service-title'>
-      人生を変えるフリマアプリ
+      草野球の助っ人募集アプリ
     </h2>
     <p class='service-explain'>
-      FURIMAはだれでもかんたんに出品・購入できる
+      B'skettは助っ人を募集できる
     </p>
     <p class='service-explain'>
-      フリマアプリです
+      アプリです
     </p>
     <div class='store-btn'>
       <%= link_to image_tag("https://linkmaker.itunes.apple.com/ja-jp/badge-lrg.svg?releaseDate=2011-09-21&kind=iossoftware&bubble=ios_apps", class:"apple-btn"), "#" %>
       <%= link_to image_tag("dl-android.png", class:"google-btn"), "#" %>
     </div>
   </div>
-  <%# /画面上部の「人生を変えるフリマアプリ」帯部分  %>
+  <%# /画面上部の帯部分  %>
 
-  <%# FURIMAが選ばれる3つの理由部分 %>
+  <%# B'skettが選ばれる3つの理由部分 %>
   <div class='select-reason-contents'>
     <h2 class='title'>
-      FURIMAが選ばれる3つの理由
+      B'skettが選ばれる3つの理由
     </h2>
     <ul class='reason-lists'>
       <li class='list'>
@@ -44,18 +44,18 @@
           で使いやすい
         </h3>
         <p class='reason-list-description'>
-          めんどくさい入力は必要なく、検索も購入もスムーズ！
+          テキスト
         </p>
       </li>
       <li class='list'>
         <%= image_tag "furima-intro03.png", class:"list-pict" %>
         <span class='reason-list-number'>3</span>
         <h3 class='reason-list-text'>
-          手数料
-          <span class='reason-list-blue-text'>業界最安</span>
+          テキスト
+          <span class='reason-list-blue-text'>テキスト</span>
         </h3>
         <p class='reason-list-description'>
-          最大3%でお得に出品&購入！
+          テキスト
         </p>
       </li>
     </ul>
