新規投稿機能作成

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -153,5 +153,10 @@
   </div>
   <%# /商品一覧 %>
 </div>
-
+<div class='purchase-btn'>
+  <span class='purchase-btn-text'>出品する</span>
+  <a href="posts/new">
+    <%= image_tag 'camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
+  </a>
+</div>
 <%= render "shared/footer" %>
